<resources>
    <string name="app_name">OMRAPP</string>
    <string name="menu">Menu</string>
    <string name="search">Tìm kiếm</string>
    <string name="filter">Lọc</string>
    <string name="add_exam">Thêm bài</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="description_exam_list">Danh sách bài thi, cuộn để xem thêm</string>
    <string name="cancel_search">Cancel</string>
    <string name="back">Quay lại</string>
    <string name="title_baithi">Bài Thi</string>
    <string name="title_dap_an">Đáp án</string>
    <string name="camera">Camera</string>
    <string name="add">Thêm</string>
    <string name="no_exam_code">Chưa có mã đề</string>
    <string name="title_ma_de">Nhập mã đề</string>
    <string name="save">Lưu</string>
    <string name="description_save">Save</string>
    <string name="tab_layout_desc">Chọn tab hiển thị Mã đề và Đáp án</string>
    <string name="menu_icon_desc">Icon menu</string>
    <string name="menu_arrow_desc">Xem thêm</string>
    <string name="default_menu_label">Menu item</string>
    <string name="navigation_drawer_open">Mở Navigation Drawer</string>
    <string name="navigation_drawer_close">Đóng Navigation Drawer</string>
    <string name="add_subject">Thêm môn học</string>
    <string name="add_class">Thêm lớp học</string>
    <string name="select_class">Chọn lớp học</string>
    <plurals name="student_count">
        <item quantity="one">%d học sinh</item>
        <item quantity="other">%d học sinh</item>
    </plurals>
    <string name="hint_student_name">Tên học sinh</string>
    <string name="hint_student_sbd">Số báo danh (6 chữ số)</string>
    <string name="label_sbd">SBD</string>
    <string name="label_full_name">Họ và tên</string>
    <string name="label_student_sbd">Số báo danh</string>
    <string name="dialog_title_create_exam">Tạo bài mới</string>
    <string name="label_exam_title">TÊN BÀI</string>
    <string name="hint_exam_title">Nhập tiêu đề</string>
    <string name="label_exam_sheet">PHIẾU CHẤM</string>
    <string name="label_class">LỚP HỌC</string>
    <string name="label_question_count">SỐ CÂU</string>
    <string name="hint_question_count">Ví dụ: 20</string>
    <string name="action_cancel">HỦY</string>
    <string name="action_create">TẠO</string>
    <string name="label_subject">TÊN MÔN HỌC</string>
    <string name="hint_subject">Nhập tên môn học</string>
    <string name="dialog_title_edit_exam">Chỉnh sửa bài thi</string>
    <string name="msg_fill_all_fields">Vui lòng nhập tiêu đề và số câu</string>
    <string name="msg_invalid_number">Số câu không hợp lệ</string>
    <string name="action_save">Lưu</string>





    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="image_preview_desc">a</string>
    <string name="annotated_image_desc">a</string>
    <string name="cham_bai_title">Chấm bài</string>
    <string name="preview_image">ảnh</string>
    <string name="add_student">thêm học sinh</string>
    <string name="label_date_added">ngày tạo</string>
    <string name="label_none">None</string>
    <string name="label_so_cau">SỐ CÂU</string>
    <string name="action_filter">a</string>
    <string name="action_search">a</string>
    <string name="action_more">more</string>
    <string name="action_export">xuất file</string>
    <string name="action_import">nhập file</string>
    <string name="edit">chỉnh sửa\n</string>
</resources>